deleted accidentle copy in app.js

--- a/Public/Home.html
+++ b/Public/Home.html
@@ -37,8 +37,8 @@
             <a href="#" class="enroll-logo-link">
                 <img src="../Images/Bluestem Logo.png" alt="Bluestem Logo" class="enroll-logo" />
             </a>
-            <span class="enroll-bluestem">BLUESTEM</span>
-            <span class="enroll-montessori">MONTESSORI SCHOOL</span>
+            <a href="Home.html" class="enroll-bluestem">BLUESTEM</a>
+            <a href="Home.html" class="enroll-montessori">MONTESSORI SCHOOL</a>
         </div>
         <div class="enroll-message-actions">
             <div class="enroll-message">NOW ENROLLING FOR THE 2025-2026 SCHOOL YEAR</div>
