fixed most importants and addedd contact page

--- a/Public/copy-html.html
+++ b/Public/copy-html.html
@@ -707,7 +707,7 @@ Learning</h3>
                     <a href="#" class="social-icon" aria-label="Instagram">
                         <img src="../vectors/Instagram.svg" alt="Instagram" width="24" height="24">
                     </a>
-                    <a href="#" class="social-icon" aria-label="Youtube">
+                    <a href="https://www.youtube.com/channel/UCMIzP-M156EZM067hTonRsQ" class="social-icon" aria-label="Youtube">
                         <img src="../vectors/Youtube.svg" alt="Youtube" width="24" height="24">
                     </a>
                     <a href="mailto:info@bluestemmontessori.com" class="social-icon" aria-label="Email">
