--- a/Public/Home.html
+++ b/Public/Home.html
@@ -128,7 +128,7 @@
             <div class="enroll-message">NOW ENROLLING FOR THE 2025-2026 SCHOOL YEAR</div>
             <div class="enroll-actions">
                 <a href="../under_construction.html" class="enroll-btn marigold enroll-btn-apply">Apply Now</a>
-                <a href="#contact" class="enroll-btn marigold enroll-btn-contact">Contact Us</a>
+                <a href="Contact.html" class="enroll-btn marigold enroll-btn-contact">Contact Us</a>
                 <a href="tel:+14027350987" class="enroll-btn marigold enroll-btn-phone" style="display:none">
                     <span style="font-size:1.2em;vertical-align:middle;">📞</span>
                 </a>
