--- a/Public/Home.html
+++ b/Public/Home.html
@@ -93,7 +93,7 @@
         "slogan": "Child-led discovery and hands-on learning",
         "sameAs": [
             "https://www.facebook.com/BluestemMontessori",
-            "https://www.instagram.com/bluestemmontessori"
+            "https://www.instagram.com/bluestemmontessorielementary/"
         ],
         "contactPoint": {
             "@type": "ContactPoint",
@@ -114,6 +114,12 @@
 </head>
 
 <body>
+    <!-- Quote Loader -->
+    <div class="quote-loader">
+        <div class="quote-text">"Education is the best weapon for peace."</div>
+        <div class="quote-author">— Maria Montessori, Education and Peace</div>
+    </div>
+
     <!-- Enrollment Banner -->
     <div class="sticky-enroll-bar">
         <div class="enroll-bar-inner">
@@ -232,11 +238,6 @@
         </div>
     </section>
 
-    <!-- Quote Loader -->
-    <div class="quote-loader">
-        <div class="quote-text">"Education is the best weapon for peace."</div>
-        <div class="quote-author">— Maria Montessori, Education and Peace</div>
-    </div>
 
     <!-- School Module -->
     <div class="school-module">
@@ -591,7 +592,7 @@ Learning</h3>
                     <a href="../under_construction.html" class="social-icon" aria-label="Facebook">
                         <img src="../vectors/Facebook.svg" alt="Facebook" width="24" height="24">
                     </a>
-                    <a href="../under_construction.html" class="social-icon" aria-label="Instagram">
+                    <a href="https://www.instagram.com/bluestemmontessorielementary/" class="social-icon" aria-label="Instagram">
                         <img src="../vectors/Instagram.svg" alt="Instagram" width="24" height="24">
                     </a>
                     <a href="https://www.youtube.com/channel/UCMIzP-M156EZM067hTonRsQ" class="social-icon" aria-label="Youtube">
