--- a/Public/Home.html
+++ b/Public/Home.html
@@ -399,7 +399,7 @@
                             <img src="../Images/Founder_Spotlight.jpg" alt="Laura Roberts" class="founder-image">
                         </div>
                         <div class="founder-quote">
-                            "Learning should be as adventurous as life itself."
+                            "Traditional school settings don’t work for every kid. Montessori education should be accessible to everyone."
                         </div>
                     </div>
                     
