--- a/Public/Contact.html
+++ b/Public/Contact.html
@@ -41,9 +41,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Gravitas+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Overlock:wght@400;700&display=swap" rel="stylesheet">
     
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="public.css">
+    <!-- Stylesheets (global → site → nav → page) -->
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="public.css">
     <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="Contact.css">
     
