--- a/Public/Home.html
+++ b/Public/Home.html
@@ -42,7 +42,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Overlock:wght@400;700&display=swap" rel="stylesheet">
     
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="public.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="Home.css">
