bem clean home.css

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="logo">
             <img src="Images/Bluestem Logo.png" alt="Bluestem Montessori Logo" style="width: 80px; height: 80px; object-fit: contain;">
         </div>
-        <div class="featured-box-green" style="background: linear-gradient(135deg, rgba(143, 175, 143, 0.15), rgba(143, 175, 143, 0.25)); backdrop-filter: blur(10px); background-color: rgba(255, 255, 255, 0.9);">
+        <div class="featured-box featured-box--green" style="background: linear-gradient(135deg, rgba(143, 175, 143, 0.15), rgba(143, 175, 143, 0.25)); backdrop-filter: blur(10px); background-color: rgba(255, 255, 255, 0.9);">
             <h1 class="font-fredericka text-green" style="margin-bottom: 1rem; font-size: 2.5rem;">BLUESTEM MONTESSORI</h1>
             <p class="subtitle">Where Independence, Confidence & Passion Flourish</p>
             <a href="Public/Home.html" class="enter-site-btn" id="enter-site-btn">Enter Our Learning Community</a>
