--- a/under_construction.html
+++ b/under_construction.html
@@ -91,7 +91,7 @@
         }
 
         /* Featured box brown styles - enhance Home.css version with sandy background */
-        .featured-box-brown {
+        .featured-box--brown {
             /* Add sandy background color behind the gradient */
             background-color: rgba(248, 246, 243, 0.5);
         }
@@ -314,7 +314,7 @@
 
         /* Responsive design */
         @media (max-width: 768px) {
-            .featured-box-brown {
+            .featured-box--brown {
                 padding: 30px 20px;
             }
 
@@ -396,7 +396,7 @@
                 justify-content: center;
             }
 
-            .layout-split-lr .featured-box-brown {
+            .layout-split-lr .featured-box--brown {
                 width: 100%;
                 max-width: 800px;
                 margin: 0 auto;
@@ -444,7 +444,7 @@
     
     <div class="left-section">
         <div class="content-container">
-            <div class="featured-box-brown">
+            <div class="featured-box featured-box--brown">
                 <h1>UNDER CONSTRUCTION</h1>
                 <h2>Coming Soon
                     <span class="loading-dots">
