--- a/Public/Contact.html
+++ b/Public/Contact.html
@@ -373,7 +373,7 @@
                         <img src="../vectors/location.svg" alt="Location" class="contact-svg">
                     </div>
                     <h3>Visit Our School</h3>
-                    <p>4530 A St<br>Lincoln, NE 68510</p>
+                    <p class="footer__section-text">4530 A St<br>Lincoln, NE 68510</p>
                     <span class="address-subtext">Inside the Christ United Methodist Church</span>
                     <span class="contact-description">See authentic Montessori learning in action - tours by appointment</span>
                 </div>
@@ -413,44 +413,44 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="footer-main">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3 style="color: #b52233;">Contact Us</h3>
-                    <p>4530 A St<br>Lincoln, NE 68510</p>
-                    <p>Phone: <a href="tel:+14027350987">(402) 735-0987</a></p>
-                    <p>Email: <a href="mailto:info@bluestemmontessori.com">info@bluestemmontessori.com</a></p>
+        <div class="footer__main">
+            <div class="footer__content">
+                <div class="footer__section">
+                    <h3 class="footer__section-title footer__section-title--contact">Contact Us</h3>
+                    <p class="footer__section-text">4530 A St<br>Lincoln, NE 68510</p>
+                    <p class="footer__section-text">Phone: <a href="tel:+14027350987" class="footer__section-link">(402) 735-0987</a></p>
+                    <p class="footer__section-text">Email: <a href="mailto:info@bluestemmontessori.com" class="footer__section-link">info@bluestemmontessori.com</a></p>
                 </div>
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <p><a href="../under_construction.html">About Us</a></p>
-                    <p><a href="Home.html#programs">Programs</a></p>
-                    <p><a href="../under_construction.html">Enrollment</a></p>
-                    <p><a href="../under_construction.html">Testimonials</a></p>
+                <div class="footer__section">
+                    <h3 class="footer__section-title">Quick Links</h3>
+                    <p class="footer__section-text"><a href="../under_construction.html" class="footer__section-link">About Us</a></p>
+                    <p class="footer__section-text"><a href="Home.html#programs" class="footer__section-link">Programs</a></p>
+                    <p class="footer__section-text"><a href="../under_construction.html" class="footer__section-link">Enrollment</a></p>
+                    <p class="footer__section-text"><a href="../under_construction.html" class="footer__section-link">Testimonials</a></p>
                 </div>
-                <div class="footer-section">
-                    <h3 style="color: #8faf8f;">Resources</h3>
-                    <p><a href="downloads/handbooks/">Parent Handbook</a></p>
-                    <p><a href="../under_construction.html">Calendar</a></p>
-                    <p><a href="downloads/forms/">Forms</a></p>
-                    <p><a href="downloads/newsletters/">Newsletter</a></p>
+                <div class="footer__section">
+                    <h3 class="footer__section-title footer__section-title--resources">Resources</h3>
+                    <p class="footer__section-text"><a href="downloads/handbooks/" class="footer__section-link">Parent Handbook</a></p>
+                    <p class="footer__section-text"><a href="../under_construction.html" class="footer__section-link">Calendar</a></p>
+                    <p class="footer__section-text"><a href="downloads/forms/" class="footer__section-link">Forms</a></p>
+                    <p class="footer__section-text"><a href="downloads/newsletters/" class="footer__section-link">Newsletter</a></p>
                 </div>
             </div>
             
             <!-- Logo and Social Section -->
-            <div class="footer-logo-social">
-                <img src="../Images/Bluestem Logo.png" alt="Bluestem Montessori School" class="footer-logo">
-                <div class="footer-social">
-                    <a href="../under_construction.html" class="social-icon" aria-label="Facebook">
+            <div class="footer__logo-social">
+                <img src="../Images/Bluestem Logo.png" alt="Bluestem Montessori School" class="footer__logo">
+                <div class="footer__social">
+                    <a href="../under_construction.html" class="footer__social-icon" aria-label="Facebook">
                         <img src="../vectors/Facebook.svg" alt="Facebook" width="24" height="24">
                     </a>
-                    <a href="https://www.instagram.com/bluestemmontessorielementary/" class="social-icon" aria-label="Instagram">
+                    <a href="https://www.instagram.com/bluestemmontessorielementary/" class="footer__social-icon" aria-label="Instagram">
                         <img src="../vectors/Instagram.svg" alt="Instagram" width="24" height="24">
                     </a>
-                    <a href="https://www.youtube.com/channel/UCMIzP-M156EZM067hTonRsQ" class="social-icon" aria-label="Youtube">
+                    <a href="https://www.youtube.com/channel/UCMIzP-M156EZM067hTonRsQ" class="footer__social-icon" aria-label="Youtube">
                         <img src="../vectors/Youtube.svg" alt="Youtube" width="24" height="24">
                     </a>
-                    <a href="mailto:info@bluestemmontessori.com" class="social-icon" aria-label="Email">
+                    <a href="mailto:info@bluestemmontessori.com" class="footer__social-icon" aria-label="Email">
                         <img src="../vectors/email.svg" alt="Email" width="24" height="24">
                     </a>
                 </div>
@@ -458,10 +458,10 @@
         </div>
         
         <!-- Bottom Legal Section -->
-        <div class="footer-bottom">
-            <div class="footer-legal">
-                <p class="footer-copyright">&copy; Copyright 2024, Bluestem Montessori Elementary School</p>
-                <p class="footer-disclaimer">Bluestem Montessori Elementary School does not discriminate on the basis of race, color, religion, sexual orientation, gender identification, or national and ethnic origin.</p>
+        <div class="footer__bottom">
+            <div class="footer__legal">
+                <p class="footer__copyright">&copy; Copyright 2024, Bluestem Montessori Elementary School</p>
+                <p class="footer__disclaimer">Bluestem Montessori Elementary School does not discriminate on the basis of race, color, religion, sexual orientation, gender identification, or national and ethnic origin.</p>
             </div>
         </div>
     </footer>
